fix(dashboardsettings): prevent subheader overlap

--- a/public/sass/components/_dashboard_settings.scss
+++ b/public/sass/components/_dashboard_settings.scss
@@ -49,8 +49,6 @@
 .dashboard-settings__subheader {
   color: $text-muted;
   font-style: italic;
-  position: relative;
-  top: -$space-lg;
 }
 
 .dashboard-settings__nav-item {
